# glamira-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  export_parallel.sh  pyproject.toml  run_pipeline.sh
etl/: extract_data.py  load_data.py
src/: async_crawler.py  config.py  crawl_product_name.py  ip_location_processor.py  monitor.py  producer.py  producer_split.py  split_products.py  stream_split.py  worker.py
src/extract/: checkpoint.py  mongo_extract.py  pipeline.py  redis_loader.py
src/ingestion/: fetcher.py  job_processer.py  queue_ops.py  recover.py  worker.py
src/load/: bq_loader.py  consumer.py  gcs_loader.py  ip_load_bq.py  load_ip_location_to_mongo.py  mongo_load_bq.py  queue_ops.py  recover.py
src/utils/: config.py  constants.py  ip_location_processor.py  logger.py  mongo_client.py  queue_core.py  redis_client.py
