[project]
name = "glamira-project"
version = "0.1.0"
description = ""
authors = [
    {name = "NadymB",email = "dantrinh2792001@gmail.com"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "ijson (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
