[project]
name = "glamira-project"
version = "0.1.0"
description = ""
authors = [
    {name = "NadymB",email = "dantrinh2792001@gmail.com"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "ijson (>=3.5.0,<4.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "google-cloud-storage (>=3.9.0,<4.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "ip2location (>=8.11.0,<9.0.0)",
    "playwright (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
