[tool.poetry]
name = "glamira-project"
version = "0.1.0"
description = ""
authors = ["NadymB <dantrinh2792001@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
aiohttp = "^3.13.3"
lxml = "^6.0.2"
ijson = "^3.5.0"
redis = "^7.3.0"
google-cloud-storage = "^3.9.0"
pymongo = "^4.16.0"
ip2location = "^8.11.0"
playwright = "^1.58.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"